# my_robot

./: .gitignore  Assignment 1.docx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_camera/lib/my_camera/: ip_stream_node  usbcam_node  webcam_node
install/my_camera/share/my_camera/: package.dsv  package.ps1  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/cmake/: my_robot_bringupConfig-version.cmake  my_robot_bringupConfig.cmake
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/log/: latest_build  latest_list
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: gazebo_bridge.yaml
src/my_robot_bringup/launch/: my_robot.launch.xml
src/my_robot_description/: CMakeLists.txt  maze_with_benches.sdf  package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/my_robot_description/urdf/install/: setup.bash  setup.sh
src/my_robot_description/urdf/log/: latest_build
src/object_detector/: package.xml  setup.py
src/object_detector/log/: latest_list
(+50 files in other folders)
